# live2d-demo-mingw64

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppModel.hpp  LAppTextureManager.cpp  LAppView.cpp  LAppView.hpp  main.cpp  mainMinimum.cpp
